--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -6,7 +6,7 @@ mixin footer-main()
 			+e.row.row
 				.col-xxxl-6.col-lg-5
 					+e.map-wrap
-						+e.map#map1(data-img="/img/svg/mark.svg")
+						+e.map#map1(data-img="img/svg/mark.svg")
 				+e.right-col.col
 					+e.contact-block
 							+b.section-title
