--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -38,7 +38,7 @@ html(lang="ru")
 		// Custom Browsers Color
 		meta(name='theme-color', content='#000')
 		
-		link(rel="stylesheet", href="/libs/fancybox/jquery.fancybox.min.css")
+		link(rel="stylesheet", href="libs/fancybox/jquery.fancybox.min.css")
 		//- link(rel="stylesheet", href="libs/swiper-4.2.0/swiper.min.css")
 		link(rel="stylesheet", href="libs/slick/slick.css")
 		//- link(rel="stylesheet", href="libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css")
