--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -6,7 +6,7 @@
   padding-top: 0;
 	&__map-wrap{
     height: 100%;
-    position: relative;
+    // position: relative;
     min-height: 400px;
   }
   &__map{
