--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -27,6 +27,7 @@
 			width: 50%;
 			height: 100%;
 			line-height: rem(57);  
+			text-align: left;
 			&.l{ 
 				left: 0;
 				padding-left: rem(15);
