--- a/sourse/pug/blocks/s-about/_s-about.pug
+++ b/sourse/pug/blocks/s-about/_s-about.pug
@@ -14,10 +14,10 @@ mixin s-about()
 						+icon("arrow-long-right")
 
 				.col
-					+pic('about-1')
+					+pic('about-1.jpg')
 					+e.link.fz(href="#")  НАША КОМАНДА
 				+e.last-col.col
-					+pic('about-2')
+					+pic('about-2.jpg')
 					+e.link.fz(href="#")  НАШЕ ПРОИЗВОДСТВО
 						
 	// end s-about
