--- a/sourse/pug/blocks/s-logos/_s-logos.pug
+++ b/sourse/pug/blocks/s-logos/_s-logos.pug
@@ -19,7 +19,7 @@ mixin s-logos()
 								each item in items
 									+e.item.col
 										+e.img-wrap
-											+pic(`logo-`+ item,'jpg','','lazy',0)
+											+pic(`logo-`+ item + '.jpg','','lazy',0)
 					+gr('ПРОФИЛИ',"1","2","3","4","5")
 					+gr('ФУРНИТУРА',"6","7","8")
 					+gr('СТЕКЛО И СТЕКЛОПАКЕТЫ',"9","10","11")
