--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -1,5 +1,98 @@
 .header-block {
 	padding-bottom: rem(60);
+	&--page{
+		background-color: $dark;
+		position: relative;
+		padding-bottom: 0;
+		picture{
+	
+			position: absolute;
+			top: 0;
+			@include media-breakpoint-up(lg) {
+				
+				right: 0;
+				left: auto;
+				width: 50vw;
+				transform: none;
+			}
+			transform: translateX(-50%);
+			left: 50%;
+			width: 100vw;
+			height: 100%;
+			z-index: 2;
+		}
+		.section-title{
+			padding-bottom: rem(35);
+			&__sm{
+
+			}
+		}
+		.title{
+			color: #ffffff;
+			// padding-bottom: rem(0);
+			margin-bottom: rem(55);
+		}
+		nav{
+			max-width: rem(555);
+			
+			ul{
+				display: flex;
+				@include media-breakpoint-up(sm) {
+
+					justify-content: space-between;
+				}
+				flex-wrap: wrap;
+				margin-left: -5px;
+				margin-right: -5px;
+			}
+			li{
+				padding-left: 5px;
+				padding-right: 5px;
+				list-style-type: none;
+			}
+			a{
+				color: #ffffff;
+				text-decoration: none !important;
+				font-weight: 500;
+				line-height: 1.36;
+				// Text style for "История"
+				letter-spacing: -0.18px;
+				&:hover{
+					color: #6c6c6c;
+
+				}
+			}
+		}
+	}
+	&__img-wrap{
+		min-height: rem(500);
+	}
+	&__text-block{
+		@include media-breakpoint-up(lg) {
+
+			padding-left: rem(60);
+			margin-left: auto;
+			margin-right: auto;
+			max-width: rem(700);
+			padding-top: rem(130);
+		}
+		padding-top: rem(72);
+		// @extend .section;
+		padding-bottom: rem(72);
+		p{
+			color: #969696;
+			line-height: 1.67;
+			// Text style for "Компания «"
+			letter-spacing: rem(-0.18px);
+			@include media-breakpoint-up(xl) {
+
+				padding-bottom: rem(150);
+			}
+		}
+
+	}
+	&__img-wrap{
+	}
 	//  margin-left: auto;
 	//  margin-right: auto;
 	//  max-width: 1920px;
@@ -204,6 +297,8 @@ letter-spacing: rem(-0.33px);
 
 				}
 			}
+
+
 	// 
 	@include media-breakpoint-up(xl) {}
 
