--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -4,7 +4,7 @@ html {
 	&:not(.fixed){
 
 
-		// overflow-x: hidden;
+		overflow-x: hidden;
 	}
 }
 .screen{ 
@@ -17,8 +17,9 @@ html {
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	// background-position: center -1816px;
 	background-position: center -72px ;
-	opacity: 0;
+	// opacity: 0;
 	opacity: 0.7;
 	display: none;
 } 
@@ -76,10 +77,10 @@ body {
 	&__sm{
 		font-size: rem(17);
 		color: $primary;
-		font-weight: 700;
+		font-weight: 500;
 		line-height: 1.44;
 		// Text style for "О КОМПАНИИ"
-		letter-spacing: -0.17px;
+		letter-spacing: rem(-0.17px);
 	}
 	&__lg{
 		position: absolute;
