--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -37,6 +37,10 @@
 	font-size:(17.25/10)*1rem;
 	width:(17.25/17.25)*1em;
 }
+.icon-play {
+	font-size:(444.44/10)*1rem;
+	width:(500/444.44)*1em;
+}
 .icon-star {
 	font-size:(13/10)*1rem;
 	width:(14/13)*1em;
