--- a/sourse/pug/blocks/s-content/_s-content.pug
+++ b/sourse/pug/blocks/s-content/_s-content.pug
@@ -1,9 +1,34 @@
 mixin s-content()
 	// start s-content
 	+b.s-content.section.block-with-lazy#s-content&attributes(attributes)
-		.container
-			+b.section-title.text-center
-				h2 s-content
-				
-			.row
+		.container.container--xxxl
+			+b.section-title
+				+e.H2.sm VEKA SLIDE 
+			.title Лучше один раз увидеть
+				span.text-primary ... 
+			+e.main-row.row
+				.col-lg-6
+					+pic("content-1.jpg")
+				.col
+					.pr-88
+						p.fw-500.text-dark Помимо стандартных портальных систем, которые можно найти в&nbsp;любом офисе &laquo;Биссектрисы&raquo;, showroom в&nbsp;Лахте позволяет клиентам увидеть уникальную систему VEKA SLIDE с&nbsp;автоматическим управлением в&nbsp;действии.
+						h5 Легко
+						p Даже самые массивные створки VEKASLIDE можно с&nbsp;легкостью открыть, не  прикладывая дополнительных усилий. Подъемно-раздвижной механизм позволяет  сначала, повернув ручку, приподнять створку на&nbsp;несколько миллиметров вверх, а  затем легко и&nbsp;быстро сдвинуть створку в&nbsp;сторону. Инновационная фурнитура  позволяет легко управлять самыми широкими створками. Это под силу даже  ребенку! Еще никогда панорамное остекление не&nbsp;было таким элегантным и  лёгким&nbsp;&mdash; и, одновременно, таким надёжным и&nbsp;простым.
+						h5 Стильно
+						p Панорамные двери VEKASLIDE дарят Вашему дому индивидуальность, шарм, и  неповторимое чувство стиля. Раздвижные двери особенно популярны в  проектировании и&nbsp;строительстве частных домов, владельцы которых не&nbsp;желают  оставаться в&nbsp;рамках стандартных решений. С&nbsp;их&nbsp;помощью можно закрыть проём  шириной до&nbsp;шести метров. И, конечно&nbsp;же, традиционные козыри VEKA:  разнообразие цветового исполнения, конфигураций, великолепная эстетика и  высочайшая функциональность.
+			+e.main-row.row
+				.col-lg-6
+					.pl-88
+						h5 Тепло
+						p Двери VEKASLIDE&nbsp;&mdash; это ТЕПЛОЕ панорамное остекление для Вашего дома.  Двухконтурное уплотнение по&nbsp;всему периметру створок делает панорамное решение  VEKASLIDE по-настоящему герметичным. Специальная конструкция безбарьерного  порога с&nbsp;двойным термическим разделением и&nbsp;эффективным теплоизолирующим  вкладышем обеспечивает превосходную теплоизоляцию. В&nbsp;системе VEKASLIDE  предусмотрена возможность установки стеклопакета толщиной до&nbsp;42&nbsp;мм.  Герметичность конструкции позволяет сохранять необходимое тепло внутри  помещения зимой и&nbsp;прохладу летом.
+						h5 Безопасно
+						p Быть дома&nbsp;&mdash; значит, чувствовать себя в&nbsp;покое и&nbsp;безопасности. И, одновременно,  ощущать себя независимым и&nbsp;свободным, открытым к&nbsp;новым впечатлениям,  которые дарит нам окружающий мир. Панорамные двери VEKASLIDE открывают  для Вас все грани комфорта и&nbsp;дарят его новое ощущение. Они могут сделать  Вашу гостиную частью Вашего сада, открыв ее&nbsp;для свежего воздуха&nbsp;&mdash; и&nbsp;они  надёжно защищают Ваш дом от&nbsp;холода, ветра, непогоды и&nbsp;непрошенных гостей  (в&nbsp;случае с&nbsp;последними в&nbsp;системе VEKASLIDE предусмотрена возможность  дополнительного повышения противовзломных свойств конструкции).
+				.col
+					+e.row-gal.row
+						- for (var x = 2; x < 6; x++)
+							+e.img-wrap.col-6
+								a(href=`img/@2x/content-${x}.jpg` data-fancybox="gallery")
+									+pic(`content-${x}.jpg`,"bg",'lazy','440px') 
+						
 	// end s-content
+
