--- a/sourse/pug/blocks/s-production/_s-production.pug
+++ b/sourse/pug/blocks/s-production/_s-production.pug
@@ -55,3 +55,42 @@ mixin s-production()
 								+pic("s-production-3.jpg",'','lazy',0)
 
 	// end s-production
+
+mixin s-production-107_a()
+	// start s-production
+	+b.SECTION.s-production.section.lazy-background#s-production&attributes(attributes)
+		.container
+			+e.row.row
+				+e.col.col-lg-6
+					+e.text-block
+						+b.section-title
+							+e.H2.sm ПРОЕКТИРОВАНИЕ
+						.title В&nbsp;нашем Шоу-руме Вам всегда рады помочь в&nbsp;поиске идеального решения 
+							span.text-primary !
+						p Опытные технологи сотворят любую конструкцию под заказ  и&nbsp;претворят в&nbsp;жизнь мечты каждого архитектора, дизайнера и&nbsp;владельца загородной недвижимости.
+				.col-lg-6
+					+e.img-wrap 
+						+pic("show-room-1.jpg")
+		+e.group.container
+			+e.row.row
+				+e.col-auto.col-xxxl-auto.col-xl-4.col-lg-5
+					+pic("show-room-2.jpg")(class="top-img top-img--show-room")
+				.col.column-2 
+					p.fw-500.text-dark В конце июля компания «Биссектриса» открыла  восьмой офис продаж. В новом салоне представлены  портальные системы и нестандартные конструкции  для загородных домов. 
+					p Новый салон удивляет и одной из самых крупных  в Санкт-Петербурге выставок алюминиевых конструкций.  Фасадное остекление, алюминиевые окна, двери, порталы.
+					p Нестандартные конструкции, широко представленные  в&nbsp;салоне, вдохновят на&nbsp;смелые архитектурные решения. Заказ примут внимательные менеджеры, способные  проконсультировать по&nbsp;всем вопросам на&nbsp;пути к&nbsp;желанному дизайну. Опытные технологи сотворят любую конструкцию  под заказ и&nbsp;претворят в&nbsp;жизнь мечты каждого архитектора,  дизайнера и&nbsp;владельца загородной недвижимости.
+					//- .row
+					//- 	+e.col-7.col-xxl-7
+					//- 		+e.p-wrap
+					//- 			p.fw-500
+					//- 			p 
+					//- 				strong В&nbsp;2010 году  
+					//- 				| запущена полностью автоматическая линия  по&nbsp;производству стеклопакетов и&nbsp;металлопластиковых  изделий. Rotox (Германия), включающая в&nbsp;себя  оборудование, образующее единую поточную сварочно- зачистную линию для контуров рам и&nbsp;створок:
+					//- 	.col
+					//- 		ul
+					//- 			li автоматическую пилу Rotox ZGS 314
+					//- 			li автоматический 4-х головочный сварочный станок  Rotox SMK 504, позволяющий добиться идеальной  геометрии окна
+					//- 			li автоматический зачистной станок Rotox EPA 479 
+
+	// end s-production
+
