--- a/sourse/pug/blocks/s-content/_s-content.scss
+++ b/sourse/pug/blocks/s-content/_s-content.scss
@@ -1,4 +1,42 @@
 .s-content {
+	h5{
+		color: $dark;
+	}
+	&__main-row{
+		@include media-breakpoint-up(xxl)  {
+
+			@include roww(36);
+		}
+	}
+	 &__row-gal{
+		@include media-breakpoint-up(xxl) {
+
+			@include roww(47 / 2);
+		}
+		@include media-breakpoint-up(md) {
+			@include roww(30 / 2);
+			
+		}
+		@include roww(20 / 2);
+		 padding-top: rem(30);
+	 }
+	 &__img-wrap{
+		@include media-breakpoint-up(xxl) {
+
+			margin-bottom: rem(47);
+		}
+		@include media-breakpoint-up(md) {
+
+			margin-bottom: rem(30);
+		}
+		margin-bottom: rem(20);
+	 }
+	 .title{
+		 margin-bottom: rem(66);
+	 }
+	 + .footer{
+		 margin-top: rem(60);
+	 }
 	//
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
@@ -23,5 +61,17 @@
 	@include media-breakpoint-down(md) {}
 	@include media-breakpoint-down(sm) {}
 	@include media-breakpoint-down(xs) {} 
+	
+}
+.pr-88{
+	@include media-breakpoint-up(xxl) {
 
+		padding-right: rem(88);
+	}
+}
+.pl-88{
+	@include media-breakpoint-up(xxl) {
+
+		padding-left: rem(88);
+	}
 }
