--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -305,17 +305,11 @@ transition: all 0.3s ease-out;
 		line-height: rem(72);  
 		text-align: center;
 	&.l {
-		left: 0;
-		
+		left: 0; 
 	}
 	
 	&.r {
-		right: 0;
-	
-			// svg {
-			// 	@include transform(rotateY(180deg));
-			// }
-
+		right: 0;  
 	}
 
 	svg{
@@ -334,6 +328,33 @@ transition: all 0.3s ease-out;
 
 			opacity: 0.7;
 		}
+	}
+}
+
+
+.slick-dots{
+	text-align: center;
+	margin-left: rem(-10);
+	margin-right: rem(-10);
+	margin-bottom: 0;
+	padding-top: rem(13);
+	button{
+		display: none;
+	}
+	li{
+		display: inline-block;
+		width: rem(64);
+		height: rem(6);
+		margin-left: rem(10px);
+		margin-right: rem(10px);
+		background-color: #e7e7e7;
+		cursor: pointer;
+		@include mt;
+		&:hover,
+		&.slick-active{
+			background-color: $primary;
+		}
+
 	}
 }
 
@@ -552,5 +573,14 @@ a{
 		.icon{
 			transform: translateX(5px);
 		}
+	}
+}
+
+.container--xxxl{
+	margin-left: auto;
+	margin-right: auto;
+	@include media-breakpoint-up(xxxl) {
+		
+		max-width: 1700px !important;
 	}
 }
