--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -135,7 +135,7 @@ $h1-font-size:                $font-size-base * 2.5 !default;
 $h2-font-size:                rem(48px) !default;
 $h3-font-size:                $font-size-base * 1.75 !default;
 $h4-font-size:                rem(30) !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
+$h5-font-size:                rem(24) !default;
 $h6-font-size:                $font-size-base !default; 
 
 
